template/unclean/dc.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2022-08-22T16:07:08Z"
    generation: 2
    labels:
      app: quotesapi
      app.kubernetes.io/component: quotesapi
      app.kubernetes.io/instance: quotesapi
    managedFields:
    - apiVersion: apps.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:openshift.io/generated-by: {}
          f:labels:
            .: {}
            f:app: {}
            f:app.kubernetes.io/component: {}
            f:app.kubernetes.io/instance: {}
        f:spec:
          f:replicas: {}
          f:selector:
            .: {}
            f:deploymentconfig: {}
          f:strategy:
            f:activeDeadlineSeconds: {}
            f:rollingParams:
              .: {}
              f:intervalSeconds: {}
              f:maxSurge: {}
              f:maxUnavailable: {}
              f:timeoutSeconds: {}
              f:updatePeriodSeconds: {}
            f:type: {}
          f:template:
            .: {}
            f:metadata:
              .: {}
              f:annotations:
                .: {}
                f:openshift.io/generated-by: {}
              f:creationTimestamp: {}
              f:labels:
                .: {}
                f:deploymentconfig: {}
            f:spec:
              .: {}
              f:containers:
                .: {}
                k:{"name":"quotesapi"}:
                  .: {}
                  f:env:
                    .: {}
                    k:{"name":"DATABASE_NAME"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"DATABASE_PASSWORD"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"DATABASE_SERVICE_NAME"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"DATABASE_USER"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                  f:imagePullPolicy: {}
                  f:name: {}
                  f:ports:
                    .: {}
                    k:{"containerPort":8080,"protocol":"TCP"}:
                      .: {}
                      f:containerPort: {}
                      f:protocol: {}
                    k:{"containerPort":8443,"protocol":"TCP"}:
                      .: {}
                      f:containerPort: {}
                      f:protocol: {}
                  f:resources: {}
                  f:terminationMessagePath: {}
                  f:terminationMessagePolicy: {}
              f:dnsPolicy: {}
              f:restartPolicy: {}
              f:schedulerName: {}
              f:securityContext: {}
              f:terminationGracePeriodSeconds: {}
      manager: oc
      operation: Update
      time: "2022-08-22T16:07:08Z"
    - apiVersion: apps.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:template:
            f:spec:
              f:containers:
                k:{"name":"quotesapi"}:
                  f:image: {}
          f:triggers: {}
        f:status:
          f:availableReplicas: {}
          f:conditions:
            .: {}
            k:{"type":"Available"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:status: {}
              f:type: {}
            k:{"type":"Progressing"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:reason: {}
              f:status: {}
              f:type: {}
          f:details:
            .: {}
            f:causes: {}
            f:message: {}
          f:latestVersion: {}
          f:observedGeneration: {}
          f:readyReplicas: {}
          f:replicas: {}
          f:unavailableReplicas: {}
          f:updatedReplicas: {}
      manager: openshift-controller-manager
      operation: Update
      time: "2022-08-22T16:07:48Z"
    name: quotesapi
    namespace: wcnrql-quotes-dev
    resourceVersion: "129392851"
    selfLink: /apis/apps.openshift.io/v1/namespaces/wcnrql-quotes-dev/deploymentconfigs/quotesapi
    uid: 73d38524-3a2d-4fa5-b1bf-59f6631b0caa
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      deploymentconfig: quotesapi
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          deploymentconfig: quotesapi
      spec:
        containers:
        - env:
          - name: DATABASE_NAME
            value: quotesdb
          - name: DATABASE_PASSWORD
            value: redhat
          - name: DATABASE_SERVICE_NAME
            value: quotesdb
          - name: DATABASE_USER
            value: quoteapp
          image: image-registry.openshift-image-registry.svc:5000/wcnrql-quotes-dev/quotesapi@sha256:9577884af8db64aabf3dad7ba0c533b828da5ec3d403c542123717adac62488b
          imagePullPolicy: Always
          name: quotesapi
          ports:
          - containerPort: 8443
            protocol: TCP
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - quotesapi
        from:
          kind: ImageStreamTag
          name: quotesapi:latest
          namespace: wcnrql-quotes-dev
        lastTriggeredImage: image-registry.openshift-image-registry.svc:5000/wcnrql-quotes-dev/quotesapi@sha256:9577884af8db64aabf3dad7ba0c533b828da5ec3d403c542123717adac62488b
      type: ImageChange
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2022-08-22T16:07:47Z"
      lastUpdateTime: "2022-08-22T16:07:47Z"
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    - lastTransitionTime: "2022-08-22T16:07:44Z"
      lastUpdateTime: "2022-08-22T16:07:48Z"
      message: replication controller "quotesapi-1" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    details:
      causes:
      - type: ConfigChange
      message: config change
    latestVersion: 1
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    unavailableReplicas: 0
    updatedReplicas: 1
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2022-08-22T16:06:59Z"
    generation: 3
    labels:
      app: quotesdb
      app.kubernetes.io/component: quotesdb
      app.kubernetes.io/instance: quotesdb
      app.kubernetes.io/name: mysql
    managedFields:
    - apiVersion: apps.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:openshift.io/generated-by: {}
          f:labels:
            .: {}
            f:app: {}
            f:app.kubernetes.io/component: {}
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/name: {}
        f:spec:
          f:replicas: {}
          f:selector:
            .: {}
            f:deploymentconfig: {}
          f:strategy:
            f:activeDeadlineSeconds: {}
            f:rollingParams:
              .: {}
              f:intervalSeconds: {}
              f:maxSurge: {}
              f:maxUnavailable: {}
              f:timeoutSeconds: {}
              f:updatePeriodSeconds: {}
            f:type: {}
          f:template:
            .: {}
            f:metadata:
              .: {}
              f:annotations:
                .: {}
                f:openshift.io/generated-by: {}
              f:creationTimestamp: {}
              f:labels:
                .: {}
                f:deploymentconfig: {}
            f:spec:
              .: {}
              f:containers:
                .: {}
                k:{"name":"quotesdb"}:
                  .: {}
                  f:env:
                    .: {}
                    k:{"name":"MYSQL_DATABASE"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"MYSQL_PASSWORD"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"MYSQL_USER"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                  f:imagePullPolicy: {}
                  f:name: {}
                  f:ports:
                    .: {}
                    k:{"containerPort":3306,"protocol":"TCP"}:
                      .: {}
                      f:containerPort: {}
                      f:protocol: {}
                  f:resources: {}
                  f:terminationMessagePath: {}
                  f:terminationMessagePolicy: {}
              f:dnsPolicy: {}
              f:restartPolicy: {}
              f:schedulerName: {}
              f:securityContext: {}
              f:terminationGracePeriodSeconds: {}
              f:volumes:
                .: {}
                k:{"name":"quotesdb-volume-1"}:
                  .: {}
                  f:name: {}
                  f:persistentVolumeClaim:
                    .: {}
                    f:claimName: {}
      manager: oc
      operation: Update
      time: "2022-08-22T16:06:59Z"
    - apiVersion: apps.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:template:
            f:spec:
              f:containers:
                k:{"name":"quotesdb"}:
                  f:image: {}
          f:triggers: {}
        f:status:
          f:availableReplicas: {}
          f:conditions:
            .: {}
            k:{"type":"Available"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:status: {}
              f:type: {}
            k:{"type":"Progressing"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:reason: {}
              f:status: {}
              f:type: {}
          f:details:
            .: {}
            f:causes: {}
            f:message: {}
          f:latestVersion: {}
          f:observedGeneration: {}
          f:readyReplicas: {}
          f:replicas: {}
          f:unavailableReplicas: {}
          f:updatedReplicas: {}
      manager: openshift-controller-manager
      operation: Update
      time: "2022-08-22T16:07:08Z"
    name: quotesdb
    namespace: wcnrql-quotes-dev
    resourceVersion: "129392511"
    selfLink: /apis/apps.openshift.io/v1/namespaces/wcnrql-quotes-dev/deploymentconfigs/quotesdb
    uid: 758bd05c-a5f7-4b3c-a023-624b5746e8b5
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      deploymentconfig: quotesdb
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          deploymentconfig: quotesdb
      spec:
        containers:
        - env:
          - name: MYSQL_DATABASE
            value: quotesdb
          - name: MYSQL_PASSWORD
            value: redhat
          - name: MYSQL_USER
            value: quoteapp
          image: image-registry.openshift-image-registry.svc:5000/openshift/mysql@sha256:9a781abe7581cc141e14a7e404ec34125b3e89c008b14f4e7b41e094fd3049fe
          imagePullPolicy: IfNotPresent
          name: quotesdb
          ports:
          - containerPort: 3306
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: quotesdb-volume-1
          persistentVolumeClaim:
            claimName: quotesdb-claim
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - quotesdb
        from:
          kind: ImageStreamTag
          name: mysql:5.7
          namespace: openshift
        lastTriggeredImage: image-registry.openshift-image-registry.svc:5000/openshift/mysql@sha256:9a781abe7581cc141e14a7e404ec34125b3e89c008b14f4e7b41e094fd3049fe
      type: ImageChange
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2022-08-22T16:07:07Z"
      lastUpdateTime: "2022-08-22T16:07:07Z"
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    - lastTransitionTime: "2022-08-22T16:07:08Z"
      lastUpdateTime: "2022-08-22T16:07:08Z"
      message: replication controller "quotesdb-1" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    details:
      causes:
      - type: ConfigChange
      message: config change
    latestVersion: 1
    observedGeneration: 3
    readyReplicas: 1
    replicas: 1
    unavailableReplicas: 0
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
