template/unclean/svc.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2022-08-22T16:07:08Z"
    labels:
      app: quotesapi
      app.kubernetes.io/component: quotesapi
      app.kubernetes.io/instance: quotesapi
    managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:openshift.io/generated-by: {}
          f:labels:
            .: {}
            f:app: {}
            f:app.kubernetes.io/component: {}
            f:app.kubernetes.io/instance: {}
        f:spec:
          f:ports:
            .: {}
            k:{"port":8080,"protocol":"TCP"}:
              .: {}
              f:name: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
            k:{"port":8443,"protocol":"TCP"}:
              .: {}
              f:name: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
          f:selector:
            .: {}
            f:deploymentconfig: {}
          f:sessionAffinity: {}
          f:type: {}
      manager: oc
      operation: Update
      time: "2022-08-22T16:07:08Z"
    name: quotesapi
    namespace: wcnrql-quotes-dev
    resourceVersion: "129392521"
    selfLink: /api/v1/namespaces/wcnrql-quotes-dev/services/quotesapi
    uid: 2a37766d-6d33-42f7-b597-64229c678905
  spec:
    clusterIP: 172.30.217.28
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    selector:
      deploymentconfig: quotesapi
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2022-08-22T16:06:59Z"
    labels:
      app: quotesdb
      app.kubernetes.io/component: quotesdb
      app.kubernetes.io/instance: quotesdb
      app.kubernetes.io/name: mysql
    managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:openshift.io/generated-by: {}
          f:labels:
            .: {}
            f:app: {}
            f:app.kubernetes.io/component: {}
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/name: {}
        f:spec:
          f:ports:
            .: {}
            k:{"port":3306,"protocol":"TCP"}:
              .: {}
              f:name: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
          f:selector:
            .: {}
            f:deploymentconfig: {}
          f:sessionAffinity: {}
          f:type: {}
      manager: oc
      operation: Update
      time: "2022-08-22T16:06:59Z"
    name: quotesdb
    namespace: wcnrql-quotes-dev
    resourceVersion: "129392407"
    selfLink: /api/v1/namespaces/wcnrql-quotes-dev/services/quotesdb
    uid: daf92625-e068-4686-b3b7-2e93a000b1a9
  spec:
    clusterIP: 172.30.180.109
    ports:
    - name: 3306-tcp
      port: 3306
      protocol: TCP
      targetPort: 3306
    selector:
      deploymentconfig: quotesdb
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
